--- a/code/learn/20.named_tuple.ipynb
+++ b/code/learn/20.named_tuple.ipynb
@@ -96,6 +96,8 @@
    "source": [
     "na = (ab=[1, 2], cd=[3.0, 4.0], ef=[true, false])\n",
     "\n",
+    "# Luffy is the son of Dragon.\n",
+    "\n",
     "luffy(na, id) = na[id]\n",
     "\n",
     "dragon(na) = luffy(na, 1)\n",
@@ -146,6 +148,16 @@
    "metadata": {},
    "source": [
     "It is not enough to have a type-stable data structure but also type-stable code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34c50fb8-baaa-4b99-beae-0eb6c691ebc6",
+   "metadata": {},
+   "source": [
+    "`Base.getproperty(na, :In)` propagates `Constant` `In`, and the compiler knows the types.\n",
+    "\n",
+    "`Base.getindex(na, id)` does not tell about `id`'s type, and the compiler must figure it out and optimize during run time."
    ]
   }
  ],
