--- a/code/learn/20.named_tuple.ipynb
+++ b/code/learn/20.named_tuple.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "fadf37e4-b32f-443f-bc27-f0e4d262e9ca",
    "metadata": {},
    "outputs": [
@@ -31,15 +31,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MethodInstance for getproperty(::NamedTuple{(:In, :Fl), Tuple{UnitRange{Int64}, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}}, ::Symbol)\n",
+      "MethodInstance for getproperty(::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}}, ::Symbol)\n",
       "  from getproperty(x, f::Symbol) in Base at Base.jl:38\n",
       "Arguments\n",
       "  #self#\u001b[36m::Core.Const(getproperty)\u001b[39m\n",
-      "  x\u001b[36m::NamedTuple{(:In, :Fl), Tuple{UnitRange{Int64}, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}}\u001b[39m\n",
+      "  x\u001b[36m::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}}\u001b[39m\n",
       "  f\u001b[36m::Symbol\u001b[39m\n",
-      "Body\u001b[91m\u001b[1m::Union{StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, UnitRange{Int64}}\u001b[22m\u001b[39m\n",
+      "Body\u001b[91m\u001b[1m::Union{Vector{Bool}, Vector{Float64}, Vector{Int64}}\u001b[22m\u001b[39m\n",
       "\u001b[90m1 ─\u001b[39m      nothing\n",
-      "\u001b[90m│  \u001b[39m %2 = Base.getfield(x, f)\u001b[91m\u001b[1m::Union{StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}, UnitRange{Int64}}\u001b[22m\u001b[39m\n",
+      "\u001b[90m│  \u001b[39m %2 = Base.getfield(x, f)\u001b[91m\u001b[1m::Union{Vector{Bool}, Vector{Float64}, Vector{Int64}}\u001b[22m\u001b[39m\n",
       "\u001b[90m└──\u001b[39m      return %2\n",
       "\n"
      ]
@@ -48,12 +48,12 @@
    "source": [
     "# At compile time, the compiler does not know that the `Symbol` is `:Char`.\n",
     "# It compiles getproperty(ta, ::Symbol), which returns `Vector{Any}`.\n",
-    "@code_warnaype na.In"
+    "@code_warntype na.In"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "7ffbb15c-6cbe-4608-bbdf-862ae24928fe",
    "metadata": {},
    "outputs": [
@@ -61,14 +61,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MethodInstance for (::var\"#1#2\")(::NamedTuple{(:In, :Fl), Tuple{UnitRange{Int64}, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}})\n",
-      "  from (::var\"#1#2\")(na) in Main at In[3]:3\n",
+      "MethodInstance for (::var\"#1#2\")(::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}})\n",
+      "  from (::var\"#1#2\")(na) in Main at In[8]:3\n",
       "Arguments\n",
       "  #self#\u001b[36m::Core.Const(var\"#1#2\"())\u001b[39m\n",
-      "  na\u001b[36m::NamedTuple{(:In, :Fl), Tuple{UnitRange{Int64}, StepRangeLen{Float64, Base.TwicePrecision{Float64}, Base.TwicePrecision{Float64}, Int64}}}\u001b[39m\n",
-      "Body\u001b[36m::UnitRange{Int64}\u001b[39m\n",
-      "\u001b[90m1 ─\u001b[39m %1 = Base.getproperty(na, :In)\u001b[36m::UnitRange{Int64}\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m      return %1\n",
+      "  na\u001b[36m::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}}\u001b[39m\n",
+      "Body\u001b[36m::Union{}\u001b[39m\n",
+      "\u001b[90m1 ─\u001b[39m     Base.getproperty(na, :In)\n",
+      "\u001b[90m└──\u001b[39m     Core.Const(:(return %1))\n",
       "\n"
      ]
     }
@@ -76,7 +76,7 @@
    "source": [
     "# At compile time, the compiler knows that the `Symbol` is `:Char`.\n",
     "# It compiles getproperty(ta, :Char), which returns `Vector{Char}`.\n",
-    "@code_warnaype (na->na.In)(na)"
+    "@code_warntype (na->na.In)(na)"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b2bcbbd1-a30e-46a2-9c50-de6adc12c87c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3168a91c-29bf-444f-aec2-632df993d0b5",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
      "output_type": "stream",
      "text": [
       "MethodInstance for luffy(::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}}, ::Int64)\n",
-      "  from luffy(na, id) in Main at In[9]:3\n",
+      "  from luffy(na, id) in Main at In[4]:5\n",
       "Arguments\n",
       "  #self#\u001b[36m::Core.Const(luffy)\u001b[39m\n",
       "  na\u001b[36m::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}}\u001b[39m\n",
@@ -134,10 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c91ba352-39f3-42cc-84bc-9b74c5185868",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MethodInstance for dragon(::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}})\n",
+      "  from dragon(na) in Main at In[4]:7\n",
+      "Arguments\n",
+      "  #self#\u001b[36m::Core.Const(dragon)\u001b[39m\n",
+      "  na\u001b[36m::NamedTuple{(:ab, :cd, :ef), Tuple{Vector{Int64}, Vector{Float64}, Vector{Bool}}}\u001b[39m\n",
+      "Body\u001b[36m::Vector{Int64}\u001b[39m\n",
+      "\u001b[90m1 ─\u001b[39m %1 = Main.luffy(na, 1)\u001b[36m::Vector{Int64}\u001b[39m\n",
+      "\u001b[90m└──\u001b[39m      return %1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "@code_warntype dragon(na)"
    ]
