--- a/code/learn/21.data_frame_each_function_barrier.ipynb
+++ b/code/learn/21.data_frame_each_function_barrier.ipynb
@@ -50,9 +50,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.083 ns (0 allocations: 0 bytes)\n",
-      "  79.588 ns (0 allocations: 0 bytes)\n",
-      "  152.402 ns (1 allocation: 48 bytes)\n"
+      "  2.125 ns (0 allocations: 0 bytes)\n",
+      "  121.050 ns (0 allocations: 0 bytes)\n",
+      "  97.427 ns (0 allocations: 0 bytes)\n",
+      "  189.233 ns (1 allocation: 48 bytes)\n"
      ]
     }
    ],
@@ -61,6 +62,9 @@
     "@btime $(ro_x_co_x_an[!, \"St4\"])\n",
     "\n",
     "# Evaluate the global mutable variable (interpolate) so that the compiler knows more.\n",
+    "\n",
+    "@btime ro_x_co_x_an[!, \"St4\"]\n",
+    "\n",
     "@btime $ro_x_co_x_an[!, \"St4\"]\n",
     "\n",
     "# `view` allocates and is slower (a surprise).\n",
@@ -87,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  10.041 μs (504 allocations: 17.31 KiB)\n",
-      "  14.250 μs (220 allocations: 7.98 KiB)\n"
+      "  15.000 μs (504 allocations: 17.31 KiB)\n",
+      "  21.208 μs (220 allocations: 7.98 KiB)\n"
      ]
     }
    ],
@@ -122,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "f07c037c-8797-4d00-9c19-400edc7f8802",
    "metadata": {},
    "outputs": [
@@ -130,44 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  19.833 μs (813 allocations: 31.20 KiB)\n",
-      "  22.042 μs (910 allocations: 31.20 KiB)\n",
-      "MethodInstance for mea(::DataFrame)\n",
-      "  from mea(da) in Main at In[10]:13\n",
-      "Arguments\n",
-      "  #self#\u001b[36m::Core.Const(mea)\u001b[39m\n",
-      "  da\u001b[36m::DataFrame\u001b[39m\n",
-      "Locals\n",
-      "  @_3\u001b[33m\u001b[1m::Union{Nothing, Tuple{Any, Int64}}\u001b[22m\u001b[39m\n",
-      "  ma\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "  @_5\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "  b\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "  a\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "Body\u001b[36m::Nothing\u001b[39m\n",
-      "\u001b[90m1 ─\u001b[39m       (ma = Main.Matrix(da))\n",
-      "\u001b[90m│  \u001b[39m %2  = ma\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %3  = Base.vect(4, 5)\u001b[36m::Vector{Int64}\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %4  = Base.getindex(%2, Main.:(:), %3)\u001b[91m\u001b[1m::Matrix\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %5  = Main.eachrow(%4)\u001b[91m\u001b[1m::Base.Generator{Base.OneTo{Int64}}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (@_3 = Base.iterate(%5))\n",
-      "\u001b[90m│  \u001b[39m %7  = (@_3 === nothing)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %8  = Base.not_int(%7)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m       goto #4 if not %8\n",
-      "\u001b[90m2 ┄\u001b[39m %10 = @_3\u001b[91m\u001b[1m::Tuple{Any, Int64}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %11 = Core.getfield(%10, 1)\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %12 = Base.indexed_iterate(%11, 1)\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (a = Core.getfield(%12, 1))\n",
-      "\u001b[90m│  \u001b[39m       (@_5 = Core.getfield(%12, 2))\n",
-      "\u001b[90m│  \u001b[39m %15 = Base.indexed_iterate(%11, 2, @_5)\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (b = Core.getfield(%15, 1))\n",
-      "\u001b[90m│  \u001b[39m %17 = Core.getfield(%10, 2)\u001b[36m::Int64\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (@_3 = Base.iterate(%5, %17))\n",
-      "\u001b[90m│  \u001b[39m %19 = (@_3 === nothing)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %20 = Base.not_int(%19)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m       goto #4 if not %20\n",
-      "\u001b[90m3 ─\u001b[39m       goto #2\n",
-      "\u001b[90m4 ┄\u001b[39m       return nothing\n",
-      "\n"
+      "  25.791 μs (813 allocations: 31.20 KiB)\n",
+      "  32.042 μs (910 allocations: 31.20 KiB)\n"
      ]
     }
    ],
@@ -200,9 +168,7 @@
     "\n",
     "@btime mea($ro_x_co_x_an)\n",
     "\n",
-    ";\n",
-    "\n",
-    "@code_warntype mea(ro_x_co_x_an)"
+    ";"
    ]
   },
   {
@@ -223,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.593 μs (105 allocations: 5.86 KiB)\n"
+      "  3.083 μs (105 allocations: 5.86 KiB)\n"
      ]
     }
    ],
@@ -242,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "332ad033-3be4-4077-9d4f-d655871fc28d",
    "metadata": {},
    "outputs": [
@@ -250,41 +216,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  303.336 ns (2 allocations: 1.75 KiB)\n",
-      "  332.392 ns (2 allocations: 1.84 KiB)\n",
-      "MethodInstance for maea(::Matrix{Any})\n",
-      "  from maea(ma) in Main at In[11]:11\n",
-      "Arguments\n",
-      "  #self#\u001b[36m::Core.Const(maea)\u001b[39m\n",
-      "  ma\u001b[36m::Matrix{Any}\u001b[39m\n",
-      "Locals\n",
-      "  @_3\u001b[33m\u001b[1m::Union{Nothing, Tuple{SubArray{Any, 1, Matrix{Any}, Tuple{Int64, Base.Slice{Base.OneTo{Int64}}}, true}, Int64}}\u001b[22m\u001b[39m\n",
-      "  @_4\u001b[36m::Tuple{Base.OneTo{Int64}, Int64}\u001b[39m\n",
-      "  b\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "  a\u001b[91m\u001b[1m::Any\u001b[22m\u001b[39m\n",
-      "Body\u001b[36m::Nothing\u001b[39m\n",
-      "\u001b[90m1 ─\u001b[39m %1  = Base.vect(4, 5)\u001b[36m::Vector{Int64}\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %2  = Base.getindex(ma, Main.:(:), %1)\u001b[36m::Matrix{Any}\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %3  = Main.eachrow(%2)\u001b[36m::Base.Generator{Base.OneTo{Int64}, Base.var\"#240#241\"{Matrix{Any}}}\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (@_3 = Base.iterate(%3))\n",
-      "\u001b[90m│  \u001b[39m %5  = (@_3 === nothing)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %6  = Base.not_int(%5)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m       goto #4 if not %6\n",
-      "\u001b[90m2 ┄\u001b[39m %8  = @_3\u001b[36m::Tuple{SubArray{Any, 1, Matrix{Any}, Tuple{Int64, Base.Slice{Base.OneTo{Int64}}}, true}, Int64}\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %9  = Core.getfield(%8, 1)\u001b[36m::SubArray{Any, 1, Matrix{Any}, Tuple{Int64, Base.Slice{Base.OneTo{Int64}}}, true}\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %10 = Base.indexed_iterate(%9, 1)\u001b[91m\u001b[1m::Tuple{Any, Tuple{Base.OneTo{Int64}, Int64}}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (a = Core.getfield(%10, 1))\n",
-      "\u001b[90m│  \u001b[39m       (@_4 = Core.getfield(%10, 2))\n",
-      "\u001b[90m│  \u001b[39m %13 = Base.indexed_iterate(%9, 2, @_4)\u001b[91m\u001b[1m::Tuple{Any, Tuple{Base.OneTo{Int64}, Int64}}\u001b[22m\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (b = Core.getfield(%13, 1))\n",
-      "\u001b[90m│  \u001b[39m %15 = Core.getfield(%8, 2)\u001b[36m::Int64\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m       (@_3 = Base.iterate(%3, %15))\n",
-      "\u001b[90m│  \u001b[39m %17 = (@_3 === nothing)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m│  \u001b[39m %18 = Base.not_int(%17)\u001b[36m::Bool\u001b[39m\n",
-      "\u001b[90m└──\u001b[39m       goto #4 if not %18\n",
-      "\u001b[90m3 ─\u001b[39m       goto #2\n",
-      "\u001b[90m4 ┄\u001b[39m       return nothing\n",
-      "\n"
+      "  322.231 ns (2 allocations: 1.75 KiB)\n",
+      "  361.310 ns (2 allocations: 1.84 KiB)\n"
      ]
     }
    ],
@@ -313,9 +246,7 @@
     "\n",
     "@btime maea($ma)\n",
     "\n",
-    ";\n",
-    "\n",
-    "@code_warntype maea(ma)"
+    ";"
    ]
   },
   {
@@ -330,10 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "79a26fa8-0b2b-402d-ad2c-eef32e191d9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  25.709 μs (813 allocations: 31.20 KiB)\n",
+      "  31.958 μs (910 allocations: 31.20 KiB)\n"
+     ]
+    }
+   ],
    "source": [
     "# Use a function to barrier the code that makes a `Matirx`.\n",
     "\n",
@@ -366,10 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fe4ddfad-4e8e-40b3-8905-e8f8a3429e30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  3.448 μs (107 allocations: 7.61 KiB)\n",
+      "  3.516 μs (107 allocations: 7.70 KiB)\n"
+     ]
+    }
+   ],
    "source": [
     "# Using a function to barrier the code that loops a `Matirx`.\n",
     "\n",
@@ -398,10 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "43baf279-3273-4b8e-9307-3a8f678ec209",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  3.438 μs (107 allocations: 7.61 KiB)\n",
+      "  3.521 μs (107 allocations: 7.70 KiB)\n"
+     ]
+    }
+   ],
    "source": [
     "# Barrier both.\n",
     "\n",
@@ -430,41 +388,75 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46288061-a264-4673-8c61-7f819bcf0897",
+   "id": "b12bf050-2519-4e15-9cec-b2eff73244f5",
    "metadata": {},
    "source": [
     "The compiler optimizes code at function boundaries.\n",
-    "Use multiple smaller functions! "
+    "Use multiple smaller functions! \n",
+    "\n",
+    "But what is really happening here is that `DataFrame` columns can be of any type.\n",
+    "`DataFrame` is not parameterized but its `field`s (columns) are.\n",
+    "So, the columns can change during run time and the compiler can not know about them or objects (like `Matirx`) derived from them.\n",
+    "\n",
+    "At the function barrier, the compiler knows that the function gets a `DataFrame`-derived `Matrix` (but not its type) and dispatches to `Matirx{Any}`.\n",
+    "The compiler does so because `Matirx` is not a concrete type but `Matrix{Any}` is.\n",
+    "\n",
+    "In the slower code, if we helped the compiler know that the `Matrix` is `Matrix{Any}`, the compiler does less work and the performance is even better than using the function barrier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69c12434-e226-4898-a6be-64db9aa7198d",
+   "execution_count": 11,
+   "id": "110bfb94-1c5f-4fb9-ab9f-bed364bfbf54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.817 μs (104 allocations: 7.47 KiB)\n",
+      "  1.846 μs (104 allocations: 7.56 KiB)\n"
+     ]
+    }
+   ],
    "source": [
-    "@code_warntype mt_mea(ro_x_co_x_an)"
+    "# Make `Matrix{Any}` and `zip`.\n",
+    "function mzi(da)\n",
+    "    \n",
+    "    ma = Matrix{Any}(da)\n",
+    "    \n",
+    "    for (a, b) in zip(ma[:, 4], ma[:, 5])\n",
+    "        \n",
+    "    end\n",
+    "    \n",
+    "end\n",
+    "\n",
+    "# Make `Matrix{Any}` and `eachrow`.\n",
+    "function mea(da)\n",
+    "    \n",
+    "    ma = Matrix{Any}(da)\n",
+    "    \n",
+    "    for (a, b) in eachrow(ma[:, [4, 5]])\n",
+    "        \n",
+    "    end\n",
+    "    \n",
+    "end\n",
+    "\n",
+    "# `Matrix{Any}`ing is the fastest.\n",
+    "\n",
+    "@btime mzi($ro_x_co_x_an)\n",
+    "\n",
+    "@btime mea($ro_x_co_x_an)\n",
+    "\n",
+    ";"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea6775ca-a6f1-47ad-9595-f963d7d59173",
+   "cell_type": "markdown",
+   "id": "cf2b80df-c510-4965-8db5-9b5f8b304817",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "@code_warntype mt_maea(ro_x_co_x_an)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8092724b-5ae1-4401-8b22-4c8a1a60fe27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@code_warntype maea(ma)"
+    "https://discourse.julialang.org/t/matrix-vs-matrix-any/90911"
    ]
   }
  ],
