--- a/code/learn/21.data_frame_each_function_barrier.ipynb
+++ b/code/learn/21.data_frame_each_function_barrier.ipynb
@@ -456,7 +456,22 @@
    "id": "cf2b80df-c510-4965-8db5-9b5f8b304817",
    "metadata": {},
    "source": [
-    "https://discourse.julialang.org/t/matrix-vs-matrix-any/90911"
+    "https://discourse.julialang.org/t/matrix-vs-matrix-any/90911\n",
+    "\n",
+    "`Matrix(::DataFrame)` makes `Matrix` not `Matrix{Any}`.\n",
+    "The compiler can not know the type at compile time and must figure it out at run time.\n",
+    "All subsequent operations using this object must be dynamically dispatched.\n",
+    "Dynamic dispatch is like a big `if-elseif` code, which has many branches and prevents the processor from pre-computing.\n",
+    "\n",
+    "Typing the object with an assertion helps the compiler know the type at compile time and do optimizations.\n",
+    "The compiler inlines omits, and reorders code as fit.\n",
+    "We want the compiler to do more work at compile time and less at run time.\n",
+    "We want the execution to be fast.\n",
+    "Withtout the compiler doing work at the compile time, Julia becomes just an interpreter with high latency.\n",
+    "\n",
+    "`Any` is an abstract type.\n",
+    "`Matrix{Any}` is also problematic for the same reason above.\n",
+    "The compiler must dynamically dispatch operations for it at run time."
    ]
   }
  ],
