--- a/code/penis_size.ipynb
+++ b/code/penis_size.ipynb
@@ -94,9 +94,9 @@
     "\n",
     "in_ = [parse(Float64, st) for st in co_x_in_x_nu[!, \"Avg. income per year\"]]\n",
     "\n",
-    "y, x = BioinformaticsCore.Vector.sort_like(([pe / ic for (pe, ic) in zip(pe_, in_)], co_), true)\n",
+    "y, x = BioLab.Vector.sort_like(([pe / ic for (pe, ic) in zip(pe_, in_)], co_), true)\n",
     "\n",
-    "BioinformaticsCore.Plot.plot_bar(\n",
+    "BioLab.Plot.plot_bar(\n",
     "    [y],\n",
     "    [x],\n",
     "    marker_color_ = (\"#20d9ba\",),\n",
